--- a/CICD pipeline/kubedeployment.yml
+++ b/CICD pipeline/kubedeployment.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
        - name: app
-         image: edu123/myproject:CICD
+         image: edu123/myproject:CICD30dec
 ---
 kind: Service
 apiVersion: v1
